# code-analysis-context-python-mcp

./: .claudeignore  .code-analysis.json  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_tools.py
src/: __init__.py  server.py
src/analyzers/: __init__.py
src/tools/: __init__.py  architecture_analyzer.py  context_pack_generator.py  convention_validator.py  coverage_analyzer.py  dependency_mapper.py  pattern_detector.py
src/types/: __init__.py
src/utils/: ast_parser.py  complexity_analyzer.py  diagram_generator.py  file_scanner.py  framework_detector.py
